--- a/CI/Dockerfile
+++ b/CI/Dockerfile
@@ -3,9 +3,9 @@ MAINTAINER Citopia <citopia.fr>
 
 WORKDIR /app
 
-COPY ./runner.js .
-COPY ./package.json .
-COPY ./package-lock.json .
+COPY ../runner.js .
+COPY ../package.json .
+COPY ../package-lock.json .
 
 RUN npm i
 
