--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@types/prop-types": "^15.5.5"
   },
   "dependencies": {
+    "body-parser": "latest",
     "docz": "^0.11.1",
     "express": "^4.16.3",
+    "http-proxy-middleware": "^0.19.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-google-maps": "^9.4.5",
-    "yargs": "^12.0.2",
-    "body-parser": "latest"
+    "yargs": "^12.0.2"
   }
 }
