--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node runner.js",
     "test": "node runner.js --test",
+    "debug": "node %NODE_DEBUG_OPTION%  runner.js",
     "docz:dev": "docz dev",
     "docz:build": "docz build"
   },
@@ -26,6 +27,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-google-maps": "^9.4.5",
+    "simple-git": "^1.96.0",
     "yargs": "^12.0.2"
   }
 }
