--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Citopia",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/prop-types": "^15.5.5",
     "@types/yargs": "^11.1.1"
   },
