--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-google-maps": "^9.4.5",
+    "rimraf": "^2.6.2",
     "simple-git": "^1.96.0",
     "yargs": "^12.0.2"
   }
