--- a/CI/Dockerfile
+++ b/CI/Dockerfile
@@ -1,5 +1,8 @@
 FROM thib3113/doczrunner-withgitlabinteruption:latest
 MAINTAINER Citopia <citopia.fr>
 
+#install the package globally to use it in CI
+RUN npm i -g .
+
 CMD "/bin/sh"
 ENTRYPOINT "/bin/sh"
