--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node runner.js",
     "test": "node runner.js --test",
-    "debug": "node %NODE_DEBUG_OPTION% runner.js .",
+    "debug": "node %NODE_DEBUG_OPTION% runner.js",
     "docz:dev": "docz dev",
     "docz:build": "docz build"
   },
@@ -22,13 +22,14 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/prop-types": "^15.5.5",
+    "docz": "^0.11.1",
     "@types/yargs": "^11.1.1"
   },
   "dependencies": {
     "body-parser": "latest",
-    "docz": "^0.11.1",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.19.0",
+    "ncp": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-google-maps": "^9.4.5",
