--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/prop-types": "^15.5.5",
-    "docz": "^0.11.1",
-    "@types/yargs": "^11.1.1"
+    "@types/yargs": "^11.1.1",
+    "docz": "^0.11.2"
   },
   "dependencies": {
     "body-parser": "latest",
@@ -31,7 +31,7 @@
     "http-proxy-middleware": "^0.19.0",
     "ncp": "^2.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.5.0",
+    "react": "^16.5.1",
     "react-google-maps": "^9.4.5",
     "rimraf": "^2.6.2",
     "simple-git": "^1.96.0",
