--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,5 @@ services:
 build-master:
   stage: build
   script:
-    - docker build --pull -t test-image .
+    - docker build --pull -t test_image .
+    - docker run -p 3001:3001 -e "CI_MODE=true" -e "GIT_REPO=https://***REMOVED***/citopia/styleguide.git" -v "$(pwd)"/working:/app/working
