--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/googlemaps": "^3.30.13",
+    "@types/markerclustererplus": "^2.1.33",
     "@types/prop-types": "^15.5.5",
+    "@types/react": "^16.4.14",
     "@types/yargs": "^11.1.1",
-    "docz": "^0.11.2"
+    "docz": "^0.11.2",
+    "react-dom": "^16.5.1"
   },
   "dependencies": {
     "body-parser": "latest",
