--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@***REMOVED***:citopia/styleguide.git"
+    "url": "git@git2.jvsonline.fr:citopia/styleguide.git"
   },
   "bin": {
     "docz-runner": "runner.js"
