--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "citopia-styleguide",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "body-parser": "latest",
+    "boolean": "^0.2.0",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.19.0",
     "ncp": "^2.0.0",
