--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "citopia-styleguide",
+  "name": "doczRunner-withgitlabInteruption",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
